new breakpoints etc

--- a/src/styles/base/mixins/color-variables.less
+++ b/src/styles/base/mixins/color-variables.less
@@ -41,7 +41,7 @@
 @color-secondary-800:                  shade(@color-secondary, 60%);
 @color-secondary-900:                  shade(@color-secondary, 80%);
 
-// Social media colors
+// Social Media Colors
 @color-facebook:                        #3B5998;
 @color-instagram:                       #C32AA3;
 @color-linkedin:                        #007BB6;
