--- a/src/styles/utilities/visibility.less
+++ b/src/styles/utilities/visibility.less
@@ -16,16 +16,17 @@
 		width: 1px;
 	}
 
-	.u-show {
-		display: block !important;
-	}
-
 	.u-hide {
 		display: none !important;
 	}
 
 
-	// Extra-smallall
+	// X-Small
+	@media @x-small-up {
+		.u-hide-x-small-up {
+			display: none !important;
+		}
+	}
 
 	@media @x-small-down {
 		.u-hide-x-small-down {
@@ -34,7 +35,6 @@
 	}
 
 	// Small
-
 	@media @small-up {
 		.u-hide-small-up {
 			display: none !important;
@@ -48,7 +48,6 @@
 	}
 
 	// Medium
-
 	@media @medium-up {
 		.u-hide-medium-up {
 			display: none !important;
@@ -62,7 +61,6 @@
 	}
 
 	// Large
-
 	@media @large-up {
 		.u-hide-large-up {
 			display: none !important;
@@ -75,16 +73,17 @@
 		}
 	}
 
-	// Extra-large
-
+	// X-Large
 	@media @x-large-up {
 		.u-hide-x-large-up {
 			display: none !important;
 		}
 	}
 
-	.u-hide-x-large-down {
-		display: none !important;
+	@media @x-large-down {
+		.u-hide-x-large-down {
+			display: none !important;
+		}
 	}
 
 
