simplifying nav-responsive css

--- a/src/styles/objects/nav-responsive.less
+++ b/src/styles/objects/nav-responsive.less
@@ -7,7 +7,8 @@
 	.nav-responsive() {
 		& when (@nav-responsive-breakpoint =@breakpoint-x-large) {
 
-			.menu-open {
+			// Body Class
+			body.menu-open {
 				height: 100% !important;
 				overflow: hidden !important;
 			}
@@ -26,10 +27,8 @@
 					}
 				}
 
-				[aria-hidden="true"] {
-					left: 0;
-					position: absolute;
-					top: 100%;
+				li>ul:not([aria-hidden="false"]) {
+					display: none;
 					visibility: hidden;
 				}
 
@@ -37,20 +36,17 @@
 					visibility: visible;
 				}
 
-				.no-js & li>ul {
-					display: none;
-				}
-
 				.no-js & li:hover>ul,
 				.no-js & li:focus-within>ul {
 					display: block;
+					visibility: visible
 				}
 			}
 		}
 
 		& when not (@nav-responsive-breakpoint =@breakpoint-x-large) {
 
-			.menu-open {
+			body.menu-open {
 				@media @nav-responsive-down {
 					height: 100% !important;
 					overflow: hidden !important;
@@ -60,6 +56,49 @@
 			.nav-toggle {
 				@media @nav-responsive-up {
 					display: none;
+				}
+			}
+
+			.nav-responsive() {
+				overflow-x: visible;
+				-webkit-overflow-scrolling: touch; // Prevent "ul" flashing when javascript isn't loaded
+
+				@media @nav-responsive-down {
+
+					&:not(.is-open) {
+						display: none;
+						visibility: hidden;
+
+						&.is-open {
+							overflow-y: auto;
+							visibility: visible;
+						}
+					}
+				}
+
+				@media @nav-responsive-up {
+
+					& {
+						overflow: visible;
+						visibility: visible;
+					}
+				}
+
+				[aria-hidden="false"] {
+					visibility: visible;
+				}
+			}
+			.nav-responsive-menu() {
+
+				li>&:not([aria-hidden="false"]) {
+					display: none;
+					visibility: hidden;
+				}
+
+				.no-js & li:hover>&,
+				.no-js & li:focus-within>& {
+					display: block;
+					visibility: visible
 				}
 			}
 
@@ -86,33 +125,21 @@
 						overflow: visible;
 						visibility: visible;
 					}
-
-					// Hide navigation toggle-buttons
-					.nav-toggle {
-						display: none;
-					}
 				}
 
-				[aria-hidden="true"] {
+				li>ul:not([aria-hidden="false"]) {
 					display: none;
-					left: 0;
-					position: absolute;
-					top: 100%;
 					visibility: hidden;
 				}
 
 				[aria-hidden="false"] {
-					display: block;
 					visibility: visible;
-				}
-
-				.no-js & li>ul {
-					display: none;
 				}
 
 				.no-js & li:hover>ul,
 				.no-js & li:focus-within>ul {
 					display: block;
+					visibility: visible
 				}
 			}
 		}
