move variables to styles root

--- a/src/styles/objects/icons.less
+++ b/src/styles/objects/icons.less
@@ -24,6 +24,11 @@
 
 	// Icon sizes
 
+	.icon--x-small {
+		.icon-size(@icon-x-small-size);
+		.hook-icon--x-small;
+	}
+
 	.icon--small {
 		.icon-size(@icon-small-size);
 		.hook-icon--small;
@@ -53,6 +58,8 @@
 .hook-icon() {}
 
 .hook-icon--aligned() {}
+
+.hook-icon--x-small() {}
 
 .hook-icon--small() {}
 
