--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -5,7 +5,7 @@
 // -------------------------------------------------------
 
 // Variables and mixins
-@import "base/variables";
+@import "variables";
 @import "base/mixins";
 
 // Utilities for development
