--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -454,7 +454,8 @@
 // Field-group collapse
 @field-group-breakpoint:                @breakpoint-medium;
 
-// Icons (svg)
+// Icons
+@icon-x-small-size:                     16px;
 @icon-small-size:                       24px;
 @icon-medium-size:                      32px;
 @icon-large-size:                       48px;
