--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -226,6 +226,7 @@
 // Hr
 @hr-border-color:                       @grey-100;
 @hr-border-width:                       1px;
+@hr-border-style:                       solid;
 @hr-margin:                             @spacing-base;
 
 
