--- a/src/styles/base/horizontal-rule.less
+++ b/src/styles/base/horizontal-rule.less
@@ -6,8 +6,9 @@
 
 	hr,
 	.hr {
-		border-top: @hr-border-width solid @hr-border-color;
-		border: 0;
+		border-color: @hr-border-color;
+		border-style: @hr-border-style;
+		border-width: @hr-border-width 0 0 0;
 		clear: both;
 		margin-bottom: @hr-margin;
 		margin-top: @hr-margin;
