move mixins call

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -4,9 +4,32 @@
 // RAE Framework
 // -------------------------------------------------------
 
-// Variables and mixins
+// Variables
 @import "variables";
-@import "base/mixins";
+
+// Mixins
+@import "base/mixins/arrows";
+@import "base/mixins/aspect-ratio";
+@import "base/mixins/button";
+@import "base/mixins/center";
+@import "base/mixins/clearfix";
+@import "base/mixins/color-variables";
+@import "base/mixins/cover";
+@import "base/mixins/fluid-value";
+@import "base/mixins/font-face";
+@import "base/mixins/grid-framework";
+@import "base/mixins/hamburger";
+@import "base/mixins/hide-text";
+@import "base/mixins/icon-size";
+@import "base/mixins/input-placeholder";
+@import "base/mixins/media-queries";
+@import "base/mixins/momentum-scrolling";
+@import "base/mixins/pretty-scrollbars";
+@import "base/mixins/rgba";
+@import "base/mixins/scrim";
+@import "base/mixins/tag-badge";
+@import "base/mixins/text-overflow";
+@import "base/mixins/utility-repeater";
 
 // Utilities for development
 @import "utilities/current-media-query";
