lead to ingress

--- a/src/styles/base/typography.less
+++ b/src/styles/base/typography.less
@@ -223,15 +223,15 @@
 		.hook-p;
 	}
 
-	// Lead
+	// Ingress
 
-	.lead {
-		color: @lead-color;
-		font-family: @lead-font-family;
-		font-size: @lead-font-size;
-		font-weight: @lead-font-weight;
-		line-height: @lead-line-height;
-		.hook-lead;
+	.ingress {
+		color: @ingress-color;
+		font-family: @ingress-font-family;
+		font-size: @ingress-font-size;
+		font-weight: @ingress-font-weight;
+		line-height: @ingress-line-height;
+		.hook-ingress;
 	}
 
 	// Small
@@ -387,7 +387,7 @@
 
 .hook-p() {}
 
-.hook-lead() {}
+.hook-ingress() {}
 
 .hook-small() {}
 
