--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -176,12 +176,12 @@
 @display4-font-size-medium:             round(@base-font-size * 1.5);
 @display4-font-size-large:              round(@base-font-size * 1.75);
 
-// Lead paragraph styles
-@lead-font-family:                      inherit;
-@lead-font-size:                        round(@base-font-size * 1.5);
-@lead-font-weight:                      300;
-@lead-line-height:                      @line-height-tight;
-@lead-color:                            @grey-600;
+// Ingress paragraph styles
+@ingress-font-family:                   inherit;
+@ingress-font-size:                     round(@base-font-size * 1.5);
+@ingress-font-weight:                   300;
+@ingress-line-height:                   @line-height-tight;
+@ingress-color:                         @grey-600;
 
 // Emphasis
 @small-font-size:                       75%;
